k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # هنا الـ Pipeline هيشيل الكلمة دي ويحط الـ ID الحقيقي بتاعك أوتوماتيك
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/gitops-webapp:backend-latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
