k8s/db.yaml

#old
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: db
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: db
#   template:
#     metadata:
#       labels:
#         app: db
#     spec:
#       containers:
#       - name: postgres
#         image: postgres:15
#         env:
#         - name: POSTGRES_PASSWORD
#           value: postgres
#         - name: POSTGRES_DB
#           value: microservices_db
#         ports:
#         - containerPort: 5432
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: db
# spec:
#   selector:
#     app: db
#   ports:
#   - port: 5432
#     targetPort: 5432



apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  clusterIP: None 
  selector:
    app: db
  ports:
  - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: "db"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
          subPath: postgres-db
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp2
      resources:
        requests:
          storage: 1Gi
