k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # الـ Pipeline هيغير الـ ID ده أوتوماتيك زي الباك إند
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/gitops-webapp:frontend-latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
